--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
-    "@mui/system": "^5.13.6",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "swiper": "^10.0.3"
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
