--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "swiper": "^10.0.3"
+    "swiper": "^10.0.3",
+    "vuebar": "^0.0.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
